--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Lennon's Slime Time!!!</h1>
-    <img src="img/IMG_0606.JPG" alt="" />
+    <img src="/img/IMG_0606.JPG" alt="" />
   </body>
 </html>
