--- a/index.html
+++ b/index.html
@@ -4,11 +4,99 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"
+    />
     <title>Slime Time</title>
   </head>
   <body>
-    <h1>Lennon's Slime Time!!!</h1>
-    <img src="img/IMG_0606.JPG" alt="" />
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Lennon's Slime Bar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/price.html">Pricing</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="jumbotron">
+      <h1>Lennon's Slime Bar</h1>
+      <h3>It's slime time!!!!</h3>
+      <div class="card card mr-auto card w-25" style="width: 18rem;">
+        <img
+          class="card-img-top"
+          src="img/slimeStack.jpg"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <p class="card-text">
+            Buy some slime!!!
+          </p>
+        </div>
+      </div>
+      <iframe
+        src="https://giphy.com/embed/3ov9jMu4gzKmXaIca4"
+        width="480"
+        height="264"
+        frameBorder="0"
+        class="giphy-embed"
+        allowFullScreen
+      ></iframe>
+      <iframe
+        src="https://giphy.com/embed/l44QAGQxhPYaQZ2Xm"
+        width="480"
+        height="270"
+        frameBorder="0"
+        class="giphy-embed"
+        allowFullScreen
+      ></iframe>
+      <iframe
+        src="https://giphy.com/embed/5kFczVLk4932l1BMXE"
+        width="480"
+        height="270"
+        frameBorder="0"
+        class="giphy-embed"
+        allowFullScreen
+      ></iframe>
+      <iframe
+        src="https://giphy.com/embed/qTO3G17bstuo0"
+        width="480"
+        height="359"
+        frameBorder="0"
+        class="giphy-embed"
+        allowFullScreen
+      ></iframe>
+      <p><a href="https://giphy.com/gifs/90s-qTO3G17bstuo0">via GIPHY</a></p>
+      <div class="card ml-auto card w-25" style="width: 18rem;">
+        <img class="card-img-top" src="img/lennon.jpg" alt="Card image cap" />
+        <div class="card-body">
+          <p class="card-text">
+            Lennon's slime is the best!!!
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
