--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/price.html">Pricing</a>
+            <a class="nav-link" href="./price.html">Pricing</a>
           </li>
         </ul>
       </div>
